--- a/style.css
+++ b/style.css
@@ -90,7 +90,8 @@ h2 {
    
     flex-direction: column;
     
-    padding: 10px 20px;
+    padding: clamp(10px, 5%, 40px) 20px;
+    padding-inline: auto;
     border-left: 8px solid #f59e0b;
 }
 
@@ -108,7 +109,11 @@ h3 {
     align-items: center;
     
     padding-right: 5px;
-    height: 20%;
+    
+    margin: 0 auto;
+    padding-top: clamp(5px, 10%, 15px);
+    padding-inline: auto;
+    height: 40px;
     width: 100%;
     gap: 18px;
 }
@@ -374,6 +379,7 @@ a {
     box-shadow: 0.5px 1.5px rgba(0, 0, 0, 0.356);
     height: 55%;
     border-radius: 5px;
+    
     padding: 0 17px;
     display: grid;
     grid-template-columns: 1fr;
@@ -383,7 +389,9 @@ a {
 
 .statements > div {
     /* border: 1px solid red; */
-    padding: 18px 10px;
+    padding-inline: auto;
+    padding: 0 10px;
+    padding-top: clamp(18px, 20%, 19px);
 }
 
 .statements > div > h3 , .statements > div > p {
@@ -392,11 +400,11 @@ a {
 
 .statements > div > h3 {
     margin-bottom: 2px;
-    font-size: 18px;
+    font-size: clamp(14px, 1.2rem, 20px);
 }
 
 .statements > div > p {
-    font-size: 15px;
+    font-size: 14px;
 }
 
 .first {
@@ -413,6 +421,7 @@ a {
     
     width: 100%;
     padding: 15px 15px;
+    padding-inline: auto;
     overflow: auto;
     height: 35%;
     background-color: rgba(255, 255, 255, 0.849);
@@ -472,12 +481,12 @@ a {
     }
 }
 
-@media only screen and (min-width: 555px) and (max-width: 894px){
+@media (max-width: 894px){
 
 
 
     .projects {
-        width: 195%;
+        width: 650px;
         padding: 15px 25px;
     }
 
@@ -485,7 +494,7 @@ a {
 
     .projects-grids {
         grid-template-columns: 550px;
-        overflow-x: auto;
+        
         grid-auto-columns:  550px;
         grid-template-rows: 202px;
         border-right: none;
@@ -495,7 +504,7 @@ a {
     }
 
     .announcements {
-        
+        width: 650px;
         overflow: auto;
         min-height: 100%;
         margin-top: 35px;
